--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "store",
+  "name": "city-tours",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "node-sass": "^4.12.0",
     "react": "^16.6.3",
-    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.6.3",
-    "react-paypal-express-checkout": "^1.0.5",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "styled-components": "^4.1.2"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,8 +22,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "dotenv": "^6.2.0"
-  }
+  ]
 }
